# vrc-pictures-organizer

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  app-icon.psd  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
icon/icons/mac/: icon.icns
src/: App.tsx  app.tsx  bindings.ts  constants.ts  main.ts  main.tsx  preload.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  notifications.rs  organization.rs  settings.rs
src/@types/: app.d.ts
src/feature/settings/components/: SettingsPage.tsx
src/feature/settings/hooks/: useLog.ts  useSettings.ts
src/features/app-settings/components/: AppSettingsPage.tsx  TimeInputWithPicker.tsx
src/features/app-settings/constants/: notificationMode.ts
src/features/app-settings/hooks/: useAppLog.ts  useSettings.ts
